@@ -4,6 +4,7 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id 'com.gradleup.shadow' version '9.5.1'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 java {
@@ -17,6 +18,11 @@ repositories {
 
 checkstyle {
     toolVersion = '11.0.0'
+}
+
+javafx {
+    version = '25.0.3'
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
@@ -52,7 +58,8 @@ jacocoTestReport {
 }
 
 application {
-    mainClass = 'goop.Goop'
+    mainClass = 'goop.Launcher'
+    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
 }
 
 jar {
